automatic-parser/gen/GrammarParser.java
// Generated from C:/Users/User/Desktop/MT/automatic-parser/src\Grammar.g4 by ANTLR 4.7.2
import antlr.Argument;
import antlr.CodeBlock;
import antlr.Grammar;
import antlr.LexerRule;
import antlr.NonTerminal;
import antlr.ParserRule;
import antlr.RegexRule;
import antlr.RuleNode;
import antlr.SimpleRule;
import antlr.Terminal;
import antlr.WhitespaceRule;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, GRAMMAR=12, TERMINAL=13, NONTERMINAL=14, CODEBLOCK=15, 
		WS=16, RANDOMSTRING=17;
	public static final int
		RULE_gram = 0, RULE_parserRules = 1, RULE_arguments = 2, RULE_ret = 3, 
		RULE_expand = 4, RULE_ruleNode = 5, RULE_simpleRuleNode = 6, RULE_lexerRules = 7, 
		RULE_lexerRule = 8;
	private static String[] makeRuleNames() {
		return new String[] {
			"gram", "parserRules", "arguments", "ret", "expand", "ruleNode", "simpleRuleNode", 
			"lexerRules", "lexerRule"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "';'", "'!'", "':'", "'('", "','", "')'", "'[returns'", "']'", 
			"'|'", "'='", "'WS ->'", "'grammar'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			"GRAMMAR", "TERMINAL", "NONTERMINAL", "CODEBLOCK", "WS", "RANDOMSTRING"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "antlr/Grammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class GramContext extends ParserRuleContext {
		public Grammar g;
		public Token name;
		public ParserRulesContext parserRules;
		public LexerRulesContext lexerRules;
		public TerminalNode GRAMMAR() { return getToken(GrammarParser.GRAMMAR, 0); }
		public ParserRulesContext parserRules() {
			return getRuleContext(ParserRulesContext.class,0);
		}
		public LexerRulesContext lexerRules() {
			return getRuleContext(LexerRulesContext.class,0);
		}
		public TerminalNode TERMINAL() { return getToken(GrammarParser.TERMINAL, 0); }
		public TerminalNode NONTERMINAL() { return getToken(GrammarParser.NONTERMINAL, 0); }
		public GramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_gram; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterGram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitGram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor ) return ((GrammarVisitor<? extends T>)visitor).visitGram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GramContext gram() throws RecognitionException {
		GramContext _localctx = new GramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_gram);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(18);
			match(GRAMMAR);
			setState(19);
			((GramContext)_localctx).name = _input.LT(1);
			_la = _input.LA(1);
			if ( !(_la==TERMINAL || _la==NONTERMINAL) ) {
				((GramContext)_localctx).name = (Token)_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(20);
			match(T__0);
			setState(21);
			((GramContext)_localctx).parserRules = parserRules();
			setState(22);
			((GramContext)_localctx).lexerRules = lexerRules();
			((GramContext)_localctx).g =  new Grammar((((GramContext)_localctx).name!=null?((GramContext)_localctx).name.getText():null), ((GramContext)_localctx).parserRules.rulesList, ((GramContext)_localctx).lexerRules.rulesList, ((GramContext)_localctx).parserRules.start); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParserRulesContext extends ParserRuleContext {
		public List<ParserRule> rulesList;
		public String start;
		public Token NONTERMINAL;
		public ArgumentsContext arguments;
		public RetContext ret;
		public ExpandContext expand;
		public List<TerminalNode> NONTERMINAL() { return getTokens(GrammarParser.NONTERMINAL); }
		public TerminalNode NONTERMINAL(int i) {
			return getToken(GrammarParser.NONTERMINAL, i);
		}
		public List<ArgumentsContext> arguments() {
			return getRuleContexts(ArgumentsContext.class);
		}
		public ArgumentsContext arguments(int i) {
			return getRuleContext(ArgumentsContext.class,i);
		}
		public List<RetContext> ret() {
			return getRuleContexts(RetContext.class);
		}
		public RetContext ret(int i) {
			return getRuleContext(RetContext.class,i);
		}
		public List<ExpandContext> expand() {
			return getRuleContexts(ExpandContext.class);
		}
		public ExpandContext expand(int i) {
			return getRuleContext(ExpandContext.class,i);
		}
		public ParserRulesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parserRules; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterParserRules(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitParserRules(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor ) return ((GrammarVisitor<? extends T>)visitor).visitParserRules(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParserRulesContext parserRules() throws RecognitionException {
		ParserRulesContext _localctx = new ParserRulesContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_parserRules);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			((ParserRulesContext)_localctx).rulesList =  new ArrayList<>();
			setState(41);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__1 || _la==NONTERMINAL) {
				{
				{
				boolean b = false;
				setState(29);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__1) {
					{
					setState(27);
					match(T__1);
					b = true;
					}
				}

				setState(31);
				((ParserRulesContext)_localctx).NONTERMINAL = match(NONTERMINAL);
				setState(32);
				((ParserRulesContext)_localctx).arguments = arguments();
				setState(33);
				((ParserRulesContext)_localctx).ret = ret();
				setState(34);
				match(T__2);
				setState(35);
				((ParserRulesContext)_localctx).expand = expand();
				setState(36);
				match(T__0);
				_localctx.rulesList.add(new ParserRule((((ParserRulesContext)_localctx).NONTERMINAL!=null?((ParserRulesContext)_localctx).NONTERMINAL.getText():null), ((ParserRulesContext)_localctx).arguments.args, ((ParserRulesContext)_localctx).ret.rets, ((ParserRulesContext)_localctx).expand.expandList));
				         if (b) ((ParserRulesContext)_localctx).start =  (((ParserRulesContext)_localctx).NONTERMINAL!=null?((ParserRulesContext)_localctx).NONTERMINAL.getText():null);
				}
				}
				setState(43);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArgumentsContext extends ParserRuleContext {
		public List<Argument> args;
		public Token typeName;
		public Token variableName;
		public Token typeName1;
		public Token variableName1;
		public List<TerminalNode> TERMINAL() { return getTokens(GrammarParser.TERMINAL); }
		public TerminalNode TERMINAL(int i) {
			return getToken(GrammarParser.TERMINAL, i);
		}
		public List<TerminalNode> NONTERMINAL() { return getTokens(GrammarParser.NONTERMINAL); }
		public TerminalNode NONTERMINAL(int i) {
			return getToken(GrammarParser.NONTERMINAL, i);
		}
		public ArgumentsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arguments; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterArguments(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitArguments(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor ) return ((GrammarVisitor<? extends T>)visitor).visitArguments(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArgumentsContext arguments() throws RecognitionException {
		ArgumentsContext _localctx = new ArgumentsContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_arguments);
		int _la;
		try {
			setState(60);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__3:
				enterOuterAlt(_localctx, 1);
				{
				((ArgumentsContext)_localctx).args =  new ArrayList<>();
				setState(45);
				match(T__3);
				setState(46);
				((ArgumentsContext)_localctx).typeName = _input.LT(1);
				_la = _input.LA(1);
				if ( !(_la==TERMINAL || _la==NONTERMINAL) ) {
					((ArgumentsContext)_localctx).typeName = (Token)_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(47);
				((ArgumentsContext)_localctx).variableName = _input.LT(1);
				_la = _input.LA(1);
				if ( !(_la==TERMINAL || _la==NONTERMINAL) ) {
					((ArgumentsContext)_localctx).variableName = (Token)_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				_localctx.args.add(new Argument((((ArgumentsContext)_localctx).typeName!=null?((ArgumentsContext)_localctx).typeName.getText():null), (((ArgumentsContext)_localctx).variableName!=null?((ArgumentsContext)_localctx).variableName.getText():null)));
				setState(55);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__4) {
					{
					{
					setState(49);
					match(T__4);
					setState(50);
					((ArgumentsContext)_localctx).typeName1 = _input.LT(1);
					_la = _input.LA(1);
					if ( !(_la==TERMINAL || _la==NONTERMINAL) ) {
						((ArgumentsContext)_localctx).typeName1 = (Token)_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					setState(51);
					((ArgumentsContext)_localctx).variableName1 = _input.LT(1);
					_la = _input.LA(1);
					if ( !(_la==TERMINAL || _la==NONTERMINAL) ) {
						((ArgumentsContext)_localctx).variableName1 = (Token)_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					_localctx.args.add(new Argument((((ArgumentsContext)_localctx).typeName1!=null?((ArgumentsContext)_localctx).typeName1.getText():null), (((ArgumentsContext)_localctx).variableName1!=null?((ArgumentsContext)_localctx).variableName1.getText():null)));
					}
					}
					setState(57);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(58);
				match(T__5);
				}
				break;
			case T__2:
			case T__6:
				enterOuterAlt(_localctx, 2);
				{
				((ArgumentsContext)_localctx).args =  new ArrayList<>();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RetContext extends ParserRuleContext {
		public List<Argument> rets;
		public Token typeName;
		public Token variableName;
		public Token typeName1;
		public Token variableName1;
		public List<TerminalNode> TERMINAL() { return getTokens(GrammarParser.TERMINAL); }
		public TerminalNode TERMINAL(int i) {
			return getToken(GrammarParser.TERMINAL, i);
		}
		public List<TerminalNode> NONTERMINAL() { return getTokens(GrammarParser.NONTERMINAL); }
		public TerminalNode NONTERMINAL(int i) {
			return getToken(GrammarParser.NONTERMINAL, i);
		}
		public RetContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ret; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterRet(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitRet(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor ) return ((GrammarVisitor<? extends T>)visitor).visitRet(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RetContext ret() throws RecognitionException {
		RetContext _localctx = new RetContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_ret);
		int _la;
		try {
			setState(78);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__6:
				enterOuterAlt(_localctx, 1);
				{
				((RetContext)_localctx).rets =  new ArrayList<>();
				setState(63);
				match(T__6);
				setState(64);
				((RetContext)_localctx).typeName = _input.LT(1);
				_la = _input.LA(1);
				if ( !(_la==TERMINAL || _la==NONTERMINAL) ) {
					((RetContext)_localctx).typeName = (Token)_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(65);
				((RetContext)_localctx).variableName = _input.LT(1);
				_la = _input.LA(1);
				if ( !(_la==TERMINAL || _la==NONTERMINAL) ) {
					((RetContext)_localctx).variableName = (Token)_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				_localctx.rets.add(new Argument((((RetContext)_localctx).typeName!=null?((RetContext)_localctx).typeName.getText():null), (((RetContext)_localctx).variableName!=null?((RetContext)_localctx).variableName.getText():null)));
				setState(73);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__4) {
					{
					{
					setState(67);
					match(T__4);
					setState(68);
					((RetContext)_localctx).typeName1 = _input.LT(1);
					_la = _input.LA(1);
					if ( !(_la==TERMINAL || _la==NONTERMINAL) ) {
						((RetContext)_localctx).typeName1 = (Token)_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					setState(69);
					((RetContext)_localctx).variableName1 = _input.LT(1);
					_la = _input.LA(1);
					if ( !(_la==TERMINAL || _la==NONTERMINAL) ) {
						((RetContext)_localctx).variableName1 = (Token)_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					_localctx.rets.add(new Argument((((RetContext)_localctx).typeName1!=null?((RetContext)_localctx).typeName1.getText():null), (((RetContext)_localctx).variableName1!=null?((RetContext)_localctx).variableName1.getText():null)));
					}
					}
					setState(75);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(76);
				match(T__7);
				}
				break;
			case T__2:
				enterOuterAlt(_localctx, 2);
				{
				((RetContext)_localctx).rets =  new ArrayList<>();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpandContext extends ParserRuleContext {
		public List<List<antlr.RuleNode>> expandList;
		public RuleNodeContext ruleNode;
		public List<RuleNodeContext> ruleNode() {
			return getRuleContexts(RuleNodeContext.class);
		}
		public RuleNodeContext ruleNode(int i) {
			return getRuleContext(RuleNodeContext.class,i);
		}
		public ExpandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expand; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterExpand(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitExpand(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor ) return ((GrammarVisitor<? extends T>)visitor).visitExpand(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpandContext expand() throws RecognitionException {
		ExpandContext _localctx = new ExpandContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_expand);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			((ExpandContext)_localctx).expandList =  new ArrayList<>();
			setState(81);
			((ExpandContext)_localctx).ruleNode = ruleNode();
			_localctx.expandList.add(((ExpandContext)_localctx).ruleNode.list);
			setState(89);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__8) {
				{
				{
				setState(83);
				match(T__8);
				setState(84);
				((ExpandContext)_localctx).ruleNode = ruleNode();
				_localctx.expandList.add(((ExpandContext)_localctx).ruleNode.list);
				}
				}
				setState(91);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RuleNodeContext extends ParserRuleContext {
		public List<antlr.RuleNode> list;
		public SimpleRuleNodeContext simpleRuleNode;
		public RuleNodeContext ruleNode;
		public SimpleRuleNodeContext simpleRuleNode() {
			return getRuleContext(SimpleRuleNodeContext.class,0);
		}
		public RuleNodeContext ruleNode() {
			return getRuleContext(RuleNodeContext.class,0);
		}
		public RuleNodeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ruleNode; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterRuleNode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitRuleNode(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor ) return ((GrammarVisitor<? extends T>)visitor).visitRuleNode(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RuleNodeContext ruleNode() throws RecognitionException {
		RuleNodeContext _localctx = new RuleNodeContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_ruleNode);
		try {
			setState(97);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TERMINAL:
			case NONTERMINAL:
			case CODEBLOCK:
				enterOuterAlt(_localctx, 1);
				{
				setState(92);
				((RuleNodeContext)_localctx).simpleRuleNode = simpleRuleNode();
				setState(93);
				((RuleNodeContext)_localctx).ruleNode = ruleNode();
				((RuleNodeContext)_localctx).list =  new ArrayList<>(); _localctx.list.add(((RuleNodeContext)_localctx).simpleRuleNode.node); _localctx.list.addAll(((RuleNodeContext)_localctx).ruleNode.list);
				}
				break;
			case T__0:
			case T__8:
				enterOuterAlt(_localctx, 2);
				{
				((RuleNodeContext)_localctx).list =  new ArrayList<>();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SimpleRuleNodeContext extends ParserRuleContext {
		public RuleNode node;
		public Token CODEBLOCK;
		public Token name;
		public Token TERMINAL;
		public Token NONTERMINAL;
		public TerminalNode CODEBLOCK() { return getToken(GrammarParser.CODEBLOCK, 0); }
		public List<TerminalNode> TERMINAL() { return getTokens(GrammarParser.TERMINAL); }
		public TerminalNode TERMINAL(int i) {
			return getToken(GrammarParser.TERMINAL, i);
		}
		public List<TerminalNode> NONTERMINAL() { return getTokens(GrammarParser.NONTERMINAL); }
		public TerminalNode NONTERMINAL(int i) {
			return getToken(GrammarParser.NONTERMINAL, i);
		}
		public SimpleRuleNodeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_simpleRuleNode; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterSimpleRuleNode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitSimpleRuleNode(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor ) return ((GrammarVisitor<? extends T>)visitor).visitSimpleRuleNode(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SimpleRuleNodeContext simpleRuleNode() throws RecognitionException {
		SimpleRuleNodeContext _localctx = new SimpleRuleNodeContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_simpleRuleNode);
		int _la;
		try {
			setState(123);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(99);
				((SimpleRuleNodeContext)_localctx).CODEBLOCK = match(CODEBLOCK);
				((SimpleRuleNodeContext)_localctx).node =  new CodeBlock((((SimpleRuleNodeContext)_localctx).CODEBLOCK!=null?((SimpleRuleNodeContext)_localctx).CODEBLOCK.getText():null));
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				((SimpleRuleNodeContext)_localctx).node =  new Terminal();
				setState(105);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
				case 1:
					{
					setState(102);
					((SimpleRuleNodeContext)_localctx).name = _input.LT(1);
					_la = _input.LA(1);
					if ( !(_la==TERMINAL || _la==NONTERMINAL) ) {
						((SimpleRuleNodeContext)_localctx).name = (Token)_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					setState(103);
					match(T__9);
					((Terminal)_localctx.node).name = (((SimpleRuleNodeContext)_localctx).name!=null?((SimpleRuleNodeContext)_localctx).name.getText():null);
					}
					break;
				}
				setState(107);
				((SimpleRuleNodeContext)_localctx).TERMINAL = match(TERMINAL);
				((Terminal)_localctx.node).terminalName = (((SimpleRuleNodeContext)_localctx).TERMINAL!=null?((SimpleRuleNodeContext)_localctx).TERMINAL.getText():null);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				((SimpleRuleNodeContext)_localctx).node =  new NonTerminal();
				setState(113);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
				case 1:
					{
					setState(110);
					((SimpleRuleNodeContext)_localctx).name = _input.LT(1);
					_la = _input.LA(1);
					if ( !(_la==TERMINAL || _la==NONTERMINAL) ) {
						((SimpleRuleNodeContext)_localctx).name = (Token)_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					setState(111);
					match(T__9);
					((NonTerminal)_localctx.node).name = (((SimpleRuleNodeContext)_localctx).name!=null?((SimpleRuleNodeContext)_localctx).name.getText():null);
					}
					break;
				}
				setState(115);
				((SimpleRuleNodeContext)_localctx).NONTERMINAL = match(NONTERMINAL);
				((NonTerminal)_localctx.node).nonTerminalName = (((SimpleRuleNodeContext)_localctx).NONTERMINAL!=null?((SimpleRuleNodeContext)_localctx).NONTERMINAL.getText():null);
				setState(121);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__3) {
					{
					setState(117);
					match(T__3);
					setState(118);
					((SimpleRuleNodeContext)_localctx).CODEBLOCK = match(CODEBLOCK);
					((NonTerminal)_localctx.node).args = (((SimpleRuleNodeContext)_localctx).CODEBLOCK!=null?((SimpleRuleNodeContext)_localctx).CODEBLOCK.getText():null).substring(1, (((SimpleRuleNodeContext)_localctx).CODEBLOCK!=null?((SimpleRuleNodeContext)_localctx).CODEBLOCK.getText():null).length() - 1);
					setState(120);
					match(T__5);
					}
				}

				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
